--- a/api/Gemfile
+++ b/api/Gemfile
@@ -38,6 +38,9 @@ gem "rack-cors"
 
 gem 'faker', '~> 2.20'
 
+gem 'pry-byebug'
+gem 'pry-rails'
+
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
   gem "debug", platforms: %i[ mri windows ]
