--- a/web/package.json
+++ b/web/package.json
@@ -9,12 +9,11 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
-    "bootstrap": "^5.2.3",
     "jquery": "^3.6.3",
-    "laravel-vue-pagination": "^4.0.0",
     "moment": "^2.29.4",
     "sweetalert2": "^11.7.3",
     "vue": "^3.4.27",
+    "vue-awesome-paginate": "^1.1.46",
     "vue-router": "^4.1.6",
     "vue-select": "^4.0.0-beta.6",
     "vue-select-3": "^1.0.1",
